--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "json-server db.json"
+    "server": "json-server db.json",
+    "preinstall": "npx npm-force-resolutions"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "json-server": "^1.0.0-beta.2"
+  },
+  "dependencies": {
+    "newman": "^6.2.0"
   }
 }
