--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "json-server db.json",
-    "happy-path-tests": "npx newman run collections/happy-path.postman_collection.json --globals collections/variables/workspace.postman_globals.json --reporters htmlextra,cli",
+    "happy-path-tests": "npx newman run collections/happy-path.postman_collection.json --globals collections/variables/workspace.postman_globals.json --reporters htmlextra,cli --reporter-htmlextra-export newman/report.html",
     "negative-path-tests": "npx newman run collections/negative-path.postman_collection.json --globals collections/variables/workspace.postman_globals.json --reporters htmlextra,cli",
     "e2e-tests": "npx newman run collections/e2e.postman_collection.json --globals collections/variables/workspace.postman_globals.json --reporters htmlextra,cli"
   },
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^1.7.7",
     "json-server": "^1.0.0-beta.2",
     "newman": "^6.2.0",
     "newman-reporter-htmlextra": "^1.23.1"
