--- a/.github/workflows/sanity-on-merge-request.yml
+++ b/.github/workflows/sanity-on-merge-request.yml
@@ -52,8 +52,8 @@ jobs:
         run: |
           curl -s --user "${{ secrets.MAILGUN_API_KEY }}" 
           "https://api.mailgun.net/v3/${{secrets.MAILGUN_DOMAIN}}/messages"
-          -F from=${{secrets.GITHUB_USER_EMAIL}}
-          -F to=${{secrets.GITHUB_USER_EMAIL}}
+          -F from=${{secrets.MAILGUN_USER_EMAIL}}
+          -F to=${{secrets.MAILGUN_USER_EMAIL}}
           -F subject='Test results + report'
           -F text='Testing some Mailgun awesomeness!'
           -F attachment='@newman/report.html'
