--- a/.github/workflows/sanity-on-merge-request.yml
+++ b/.github/workflows/sanity-on-merge-request.yml
@@ -52,7 +52,7 @@ jobs:
         run: |
           curl -s --user "api:${{ secrets.MAILGUN_API_KEY }}" \
           https://api.mailgun.net/v3/${{ secrets.MAILGUN_DOMAIN }}/messages \
-          -F from="${{ secrets.MAILGUN_USER_EMAIL }}" \
+          -F from=${{ secrets.MAILGUN_USER_SENDER }} \
           -F to="${{ secrets.MAILGUN_USER_EMAIL }}" \
           -F subject="Test results + report" \
           -F text="Please find the test report attached." \
