--- a/.github/workflows/sanity-on-merge-request.yml
+++ b/.github/workflows/sanity-on-merge-request.yml
@@ -54,7 +54,8 @@ jobs:
             https://api.mailgun.net/v3/${{ secrets.MAILGUN_DOMAIN }}/messages \
             -F from="${{ secrets.MAILGUN_USER_SENDER }}" \
             -F to="${{ secrets.MAILGUN_USER_EMAIL }}" \
-            -F subject="Test Email from GitHub Actions" \
-            -F text="This is a test email sent from a GitHub Actions workflow."
+            -F subject="Test results + report" \
+            -F text="Please find the test report attached." \
+            -F attachment="@newman/report.html"
 
           
