clean sanity workflow file and update regression one with mailing automation

--- a/.github/workflows/monthly-regression.yml
+++ b/.github/workflows/monthly-regression.yml
@@ -42,3 +42,13 @@ jobs:
           npm run happy-path-tests
           npm run negative-path-tests
           npm run e2e-tests
+
+      - name: Send email with report - MailGun
+        run: |
+          curl -s --user "api:${{ secrets.MAILGUN_API_KEY }}" \
+            https://api.mailgun.net/v3/${{ secrets.MAILGUN_DOMAIN }}/messages \
+            -F from="${{ secrets.MAILGUN_USER_SENDER }}" \
+            -F to="${{ secrets.MAILGUN_USER_EMAIL }}" \
+            -F subject="Test results + report" \
+            -F text="Please find the test report attached." \
+            -F attachment="@newman/report.html"
