--- a/.github/workflows/monthly-regression.yml
+++ b/.github/workflows/monthly-regression.yml
@@ -39,9 +39,14 @@ jobs:
 
       - name: Run Postman Tests
         run: |
-          npm run happy-path-tests
-          npm run negative-path-tests
-          npm run e2e-tests
+          TIMESTAMP=$(date +%Y%m%d%H%M%S)
+          REPORT_FILE="report_${TIMESTAMP}.html"
+
+          newman run collections/happy-path.postman_collection.json --globals collections/variables/workspace.postman_globals.json --reporters htmlextra --reporter-htmlextra-export newman/${REPORT_FILE}
+          newman run collections/negative-path.postman_collection.json --globals collections/variables/workspace.postman_globals.json --reporters htmlextra --reporter-htmlextra-export newman/${REPORT_FILE}
+          newman run collections/e2e.postman_collection.json --globals collections/variables/workspace.postman_globals.json --reporters htmlextra --reporter-htmlextra-export newman/${REPORT_FILE}
+          
+          ls newman
 
       - name: Send email with report - MailGun
         run: |
