--- a/.github/workflows/monthly-regression.yml
+++ b/.github/workflows/monthly-regression.yml
@@ -42,9 +42,9 @@ jobs:
           TIMESTAMP=$(date +%Y%m%d%H%M%S)
           REPORT_FILE="report_${TIMESTAMP}.html"
 
-          newman run collections/happy-path.postman_collection.json --globals collections/variables/workspace.postman_globals.json --reporters htmlextra --reporter-htmlextra-export newman/${REPORT_FILE}
-          newman run collections/negative-path.postman_collection.json --globals collections/variables/workspace.postman_globals.json --reporters htmlextra --reporter-htmlextra-export newman/${REPORT_FILE}
-          newman run collections/e2e.postman_collection.json --globals collections/variables/workspace.postman_globals.json --reporters htmlextra --reporter-htmlextra-export newman/${REPORT_FILE}
+          npx newman run collections/happy-path.postman_collection.json --globals collections/variables/workspace.postman_globals.json --reporters htmlextra --reporter-htmlextra-export newman/${REPORT_FILE}
+          npx newman run collections/negative-path.postman_collection.json --globals collections/variables/workspace.postman_globals.json --reporters htmlextra --reporter-htmlextra-export newman/${REPORT_FILE}
+          npx newman run collections/e2e.postman_collection.json --globals collections/variables/workspace.postman_globals.json --reporters htmlextra --reporter-htmlextra-export newman/${REPORT_FILE}
           
           ls newman
 
