--- a/.github/workflows/sanity-on-merge-request.yml
+++ b/.github/workflows/sanity-on-merge-request.yml
@@ -38,15 +38,23 @@ jobs:
                 fi
             done
 
-      - name: Run Postman Tests
+      - name: Run Postman Tests - Happy Path
         run: |
           TIMESTAMP=$(date +%Y%m%d%H%M%S)
           REPORT_FILE="report_${TIMESTAMP}.html"
 
           npx newman run collections/happy-path.postman_collection.json --globals collections/variables/workspace.postman_globals.json --reporters htmlextra --reporter-htmlextra-export newman/${REPORT_FILE}
-          npx newman run collections/negative-path.postman_collection.json --globals collections/variables/workspace.postman_globals.json --reporters htmlextra --reporter-htmlextra-export newman/${REPORT_FILE}
-          
+  
           ls newman
+
+      - name: Run Postman Tests - Negative Path
+        run: |
+            TIMESTAMP=$(date +%Y%m%d%H%M%S)
+            REPORT_FILE="report_${TIMESTAMP}.html"
+  
+            npx newman run collections/negative-path.postman_collection.json --globals collections/variables/workspace.postman_globals.json --reporters htmlextra --reporter-htmlextra-export newman/${REPORT_FILE}
+            
+            ls newman
 
       - name: Send email with report - MailGun
         run: |
